Fix QQuickIconLabel's baselineOffset

Set it to the bottom of the text if there is text.

Change-Id: I03e14ec587e0868e1f2104dd464591b243ea9264
Fixes: QTBUG-71554
Reviewed-by: Pierre-Yves Siret <gr3cko@gmail.com>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>